--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ torch = {version = "^2.3.0+cu118", source = "torch118"}
 numpy = "^1.26.4"
 gymnasium = "^0.29.1"
 mujoco = "^3.1.5"
+imageio = "^2.34.1"
+pyyaml = "^6.0.1"
 
 [[tool.poetry.source]]
 name = "torch118"
