--- a/hyperparams.yml
+++ b/hyperparams.yml
@@ -1,6 +1,3 @@
-config:
-  hidden_dim: 256
-  hidden_layers: 2
 
 MountainCarContinuous-v0:
   n_timesteps: 50000
@@ -8,11 +5,12 @@ MountainCarContinuous-v0:
   learning_rate: !!float 3e-4
   buffer_size: 50000
   batch_size: 512
-  ent_coef: 0.1
+  ent_coeff: 0.1
   train_freq: 32
   gradient_steps: 32
   gamma: 0.9999
   tau: 0.01
   learning_starts: 0
+  use_prioritized_buffer: False
 
   
